fixed btn-img issue, fix wrap text todo

--- a/html/apps/02_todolist/style.css
+++ b/html/apps/02_todolist/style.css
@@ -88,7 +88,6 @@ select {
     border-radius: 5px;
     word-wrap: break-word;
     flex:1;
-    height:3rem;
 }
 
 .check-btn {
